fix: alignment for case studies

--- a/src/scss/pages/_homepage.scss
+++ b/src/scss/pages/_homepage.scss
@@ -38,6 +38,15 @@
   fill: var(--color-mid-text);
 }
 
+.homepage__case-studies {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  grid-column-gap: 30px;
+  max-width: 70rem;
+  margin: auto;
+}
+
 .homepage .repel {
   --repel-vertical-alignment: stretch;
 }
